# Universal_Robots_ROS2_Driver

ur_moveit_config/: CMakeLists.txt
ur_moveit_config/config/: joint_limits.yaml  moveit_controllers.yaml  ur_servo.yaml
ur_moveit_config/launch/: ur_moveit.launch.py
ur_moveit_config/scripts/: wait_for_robot_description
ur_moveit_config/srdf/: ur_macro.srdf.xacro
ur_robot_driver/scripts/: wait_for_robot_description
